crates/au-cli/tests/it/snapshots/it__scenarios__cardinality-bad-shape.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "cardinality-bad-shape",
      "message": "field 'verts': list cardinality '[5..1]' is inverted; the lower bound must not exceed the upper",
      "related": [
        {
          "file": "<root>/scenarios/cardinality-bad-shape/type/poly.type.yaml",
          "line_col": {
            "end": {
              "col": 24,
              "line": 2
            },
            "start": {
              "col": 10,
              "line": 2
            }
          },
          "range": {
            "end": 31,
            "start": 17
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/cardinality-bad-shape/poly.md",
        "line_col": {
          "end": {
            "col": 12,
            "line": 3
          },
          "start": {
            "col": 8,
            "line": 3
          }
        },
        "range": {
          "end": 26,
          "start": 22
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 27,
                        "line_col": {
                          "end": {
                            "col": 28,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/cardinality-bad-shape/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "cardinality-bad-shape"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "cardinality-bad-shape"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/cardinality-bad-shape/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "poly"
        ],
        "closure": [
          "poly"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "verts",
            "origins": [
              {
                "name": "poly",
                "origin_path": "<root>/scenarios/cardinality-bad-shape/type/poly.type.yaml",
                "required": true,
                "shape": "String[5..1]"
              }
            ],
            "required": true,
            "shape": "String[5..1]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 26,
                        "line_col": {
                          "end": {
                            "col": 12,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 22
                      },
                      "file": "<root>/scenarios/cardinality-bad-shape/poly.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": [
                        "a"
                      ]
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": [
                    "a"
                  ]
                }
              }
            ],
            "field": "verts"
          }
        ],
        "file": "<root>/scenarios/cardinality-bad-shape/poly.md",
        "section_presence": null
      }
    ]
  }
}
