crates/au-cli/tests/it/snapshots/it__scenarios__cardinality-union-subsumption.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "subsumption-in-slot-union",
      "message": "field 'tags' on type-def 'cataloguer': slot-union branch 'String[+]' adds nothing — 'String[]' is wider and accepts every 'String[+]' value",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/cardinality-union-subsumption/type/cataloguer.type.yaml",
        "line_col": {
          "end": {
            "col": 31,
            "line": 5
          },
          "start": {
            "col": 9,
            "line": 5
          }
        },
        "range": {
          "end": 224,
          "start": 202
        }
      }
    }
  ],
  "graph": {
    "types": [
      {
        "abstract": false,
        "body": null,
        "effective_body": null,
        "fields": [
          {
            "key_span": {
              "end": 200,
              "line_col": {
                "end": {
                  "col": 7,
                  "line": 5
                },
                "start": {
                  "col": 3,
                  "line": 5
                }
              },
              "start": 196
            },
            "name": "tags",
            "required": true,
            "shape": "<String[] | String[+]>",
            "shape_ast": {
              "branches": [
                {
                  "inner": {
                    "kind": "primitive",
                    "name": "String"
                  },
                  "kind": "list",
                  "min": 0
                },
                {
                  "inner": {
                    "kind": "primitive",
                    "name": "String"
                  },
                  "kind": "list",
                  "min": 1
                }
              ],
              "kind": "union"
            }
          }
        ],
        "hash": "abf4e96b7e7acfc3",
        "meta_blocks": null,
        "name": "cataloguer",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/cardinality-union-subsumption/type/cataloguer.type.yaml",
          "span": {
            "end": 225,
            "line_col": {
              "end": {
                "col": 1,
                "line": 6
              },
              "start": {
                "col": 1,
                "line": 4
              }
            },
            "start": 186
          }
        },
        "unmet_required_meta": []
      }
    ]
  }
}
